# dig-a-plan-optimization

./: .buildinfo  .dockerignore  .envrc  .gitignore  .pylintrc  .settings.toml  Dockerfile  Dockerfile.julia  Dockerfile.ray  LICENSE  Makefile  Makefile.common.mak  NOTICE  README.md  analysis_plots.py  data_schema.html  docker-compose.yml  genindex.html  index.html  intro.html  introduction.html  master_model.html  mypy.ini  objects.inv  pipeline.html  pyproject.toml  search.html  searchindex.js  slave_model.html
.doctrees/: data_schema.doctree  environment.pickle  index.doctree  intro.doctree  introduction.doctree  master_model.doctree  pipeline.doctree  slave_model.doctree
_sources/: data_schema.rst.txt  index.rst.txt  intro.md.txt  introduction.rst.txt  master_model.rst.txt
data/: bender_cuts.json  default.json  out_of_sample_scenarios.json  scenarios_request.json  simple_grid.p
dockerfiles/: .dockerignore  Dockerfile.julia  Dockerfile.py  Dockerfile.python  Dockerfile.ray  docker-compose.yml
docs/: Benders Decomposition.rst  D_W Decomposition.rst  D_W_model.rst  conf.py  constraints_master.py  constraints_slave.py  index.rst  introduction.rst  master_model.rst  pipeline.rst  slave_model.rst
dry-run/: 01-conic_test.py
examples/: 00-test_case_simple_grid.py  01-bender_simple_grid.py  02-combined_model.py  02_combined_model.py  03-combined_model_boisy.py  04-ADMM-Compaire-PP.py  04-admm-compaired- pandapower.py  04-admm-compaired-loss.py  04-admm-different-scenarios.py  04-admm-simple-model-loss.py  04-admm-simple-model-penalty.py  04-admm_simple_model.py  05-combined_model_scenarios.py  06-admm_boisy.py  06-admm_estavayer_central_real_data.py  07-expansion_extra_simple_grid.jl  07-plot-boisy.py  08-expansion-admm-iteration.py  08-plot-boisy.py  09-expansion-admm-iteration-boisy.py  10-download_from_swiss_topo.py  10-load-profile-generator.py  10-plot-resuls.py  __init__.py  default.json  test_case_simple_grid.py
experiments/: 01-bender_simple_grid.py  02-combined_model.py  03-combined_model_boisy.py  04-admm-compaired- pandapower.py  04-admm_simple_model.py  05-combined_model_scenarios.py  06-admm_boisy.py  06-admm_estavayer_central_real_data.py  07-plot-boisy.py  08-expansion-admm-iteration.py  09-expansion-admm-iteration-boisy.py  __init__.py  common_files_recording.py  expansion.py  expansion_planning_result_sync.py  expansion_planning_script.py  test_case_simple_grid.py
external-dist/: data_exporter-0.1.0-py3-none-any.whl  swiss_topo_api-0.1.0-py3-none-any.whl  twindigrid_schema-0.5.0-py3-none-any.whl  utility_functions-0.1.0-py3-none-any.whl
notebook/: example_grid_generation.ipynb  example_grid_generation_118.ipynb
ops/: figures.html  ray-worker.html  theory-expansion-sddp-admm.html  theory-reconfiguration.html
plots/: __init__.py  analysis_interactive.py  analyzer.py  config.py  data_extractor.py  data_processor.py  example.py  graph.graphml  main.py  mongo_client.py  objectives.py  plot-resuls.py  plotter.py  run_analysis.py  visualizer.py
script/: small_grid_generation.py
scripts/: chunk-files.py  connect-ray-worker.sh  deploy-ray-worker.sh  install-docker.sh  install-julia.sh  mongo-backup-tools.py  mongo-tools.py  rename-host-ip.sh  run-all.sh  run-both-servers.sh  run-interactive.sh  run-servers.sh  runs.sh  start-ray-head.sh  start-ray-worker.sh  start-servers.sh  sync-mongodb.py
src/: .secrets.toml  build_constraints_var.py  config.py  data_connector.py  dig_a_plan_pipeline.py  dig_a_plan_pipeline1.py  dig_a_plan_pipline_D_W.py  input_parameters.py  konfig.py  local_data_exporter.py  main.ipynb  main.py  main_Dist.py  pyomo_utility.py  scenario_utility.py  scenarios.py  slave_model_S.py  switches.py
tests/: 118_grid_test.ipynb  D_W_test.ipynb  boisy_test.ipynb  boisy_test.py  conftest.py  conic_test.ipynb  dual_model_test.ipynb  duals_test.ipynb  example_grid_generation.ipynb  (+24 more)
(+413 files in other folders)
