[tool.poetry]
name = "dig-a-plan-optimization"
version = "0.1.0"
description = ""
authors = ["adeleh1379 <adelehmg@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.12,<3.14"
pyocclient = "^0.6"
pyomo = "^6.9.1"
gurobipy = ">=12.0.1,<13.0.0"
pandapower = "^3.0.0"
sphinx = "^8.1.3"
nbsphinx = "^0.9.7"
myst-parser = "^4.0.1"
sphinx-copybutton = "^0.5.2"
pydata-sphinx-theme = "^0.16.1"
sphinx-rtd-size = "^0.2.0"
sphinx-rtd-theme = "^3.0.2"
ghp-import = "^2.1.0"
plotly = "^6.0.1"
matplotlib = "^3.10.3"
mosek = "^11.0.24"
pydantic = "^2.11.7"
seaborn = "^0.13.2"
igraph = "^0.11.9"
joblib = "^1.5.1"
data-exporter = {path = "external-dist/data_exporter-0.1.0-py3-none-any.whl", optional = true}
twindigrid-schema = {path = "external-dist/twindigrid_schema-0.5.0-py3-none-any.whl", optional = true}
utility-functions = {path = "external-dist/utility_functions-0.1.0-py3-none-any.whl", optional = true}
fastapi = "^0.116.1"
uvicorn = "^0.35.0"
ray = {extras = ["default"], version = "^2.48.0"}
py-spy = "^0.4.1"
polars-lts-cpu = "^1.32.3"
pymongo = "^4.14.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
mypy = "^1.16.1"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
internal = ["data-exporter", "twindigrid-schema", "utility-functions"]